--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./images/sabor.ico">;
-    <title>Sabores de Vzla</title>
+    <title>Sabores de Venezuela</title>
     <link rel="stylesheet" href="style.css">;
 </head>
 <body>
@@ -102,7 +102,7 @@
         <div class="link">
          <h3>Contactame</h3>
          <a href="https://wa.me/542984792639?text=Hola quiero hacer un pedido" target="_blank"> 
-         <img src="./images/whatsapp-fill.svg" alt="" width="30px" height="30px" "/>
+         <img src="./images/whatsapp-fill.svg" alt="" width="40px" height="40px" "/>
         Hola quiero hacer un pedido
         </a>
         </div>
