--- a/index.html
+++ b/index.html
@@ -54,17 +54,24 @@
         </div>
     </section>
 
-    <section class="pizza container" id="Seccion2">
+    <section class="empanada container" id="Seccion2">
         <h2>Menu</h2>
-    <section class="pizza-content">
-        <div class="pizza-1">
+        <div class="sticky">
+            <h3>Contactame</h3>
+            <a href="https://wa.me/542984792639?text=Hola quiero hacer un pedido" target="_blank"> 
+            <img src="./images/whatsapp-fill.svg" alt="" width="40px" height="40px" "/>
+           <p class="textcolor">Hola quiero hacer un pedido</p>
+           </a>
+           </div>
+    <section class="empanada-content">
+        <div class="empanada-1">
          <img src="./images/tequeos.svg" alt=""/>
          <h3>$ 1500 doc.</h3>
          <p>
             Los tequeños viene rellenos de Queso, Jamon y Queso, Salchichas.
          </p>
         </div>
-        <div class="pizza-1">
+        <div class="empanada-1">
             <img src="./images/tresle.svg" alt=""/>
             <h3>$ 1000 porc.</h3>
             <p>
@@ -72,22 +79,22 @@
                Crema de Leche. Decorado con un delicioso Merengue Italiano.
             </p>
            </div>
-           <div class="pizza-1">
+           <div class="empanada-1">
             <img src="./images/tequeto.svg" alt=""/>
-            <h3>$ 2000 Combo.</h3>
+            <h3>$ 2000 Combo Tropical</h3>
             <p>
               Combo Tropical, vienen 6 empanadas, 6 tequeños y una salsa de ajo.
             </p>
            </div>
         </div>
-        <div class="pizza-1">
+        <div class="empanada-1">
          <img src="./images/empamano.svg" alt=""/>
          <h3>$ 2000 doc.</h3>
          <p>
            Las Empanadas vienen rellenas de Carne, Carne con Queso, Pollo y Pollo con queso.
          </p>
         </div>
-           <div class="pizza-1">
+           <div class="empanada-1">
             <img src="./images/ajo.svg" alt=""/>
             <h3>$ 250 porc.</h3>
             <p>
@@ -100,11 +107,11 @@
     <section id="Seccion3">
     <footer class="footer container">
         <div class="link">
-         <h3>Contactame</h3>
-         <a href="https://wa.me/542984792639?text=Hola quiero hacer un pedido" target="_blank"> 
-         <img src="./images/whatsapp-fill.svg" alt="" width="40px" height="40px" "/>
-        Hola quiero hacer un pedido
-        </a>
+         <h3>Medios de Pago</h3>
+         <div class="imagen">
+            <p>Brubank</p>
+         </div>
+         
         </div>
     </footer>
     <h4>Desarrolado por Luis E. Diaz</h4>
