--- a/index.html
+++ b/index.html
@@ -109,7 +109,10 @@
         <div class="link">
          <h3>Medios de Pago</h3>
          <div class="imagen">
-            <p>Brubank</p>
+            <p>Banco Brubank</p>
+         </div>
+         <div class="valido">
+            <p>valido solo para la ciudad de Villa Regina</p>
          </div>
         </div>
     </footer>
