--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
         </div>
     </footer>
     <h4>Desarrolado por Luis E. Diaz</h4>
+    <h4>Sabores de Venezuela &copy;&reg;</h4>
     </section> 
 </body>
 </html>
