--- a/index.html
+++ b/index.html
@@ -112,12 +112,27 @@
             <p>Banco Brubank</p>
          </div>
          <div class="valido">
-            <p>valido solo para la ciudad de Villa Regina</p>
          </div>
+
+        <div class="contenedor">
+            <div>
+            <h4>Tenemos Delivery  </h4>
+            </div>
+            <img class="imade" src="./images/deliver.png" alt=""/>
+        </div>
+
+        <p>Valido solo para la ciudad de Villa Regina.</p>
+
+        <div class="redes">
+            <div>
+            <h4>Siguenos en </h4>
+           </div>
+           <img class="imade" src="./images/face.svg" alt=""/>
+           <img class="imade" src="./images/instag.svg" alt=""/>
         </div>
     </footer>
-    <h4>Desarrolado por Luis E. Diaz</h4>
-    <h4>Sabores de Venezuela &reg;</h4>
+    <h4>Desarrollado por Luis E. Diaz</h4>
+    <h4>&copy; Sabores de Venezuela</h4>
     </section> 
 </body>
 </html>
