--- a/index.html
+++ b/index.html
@@ -95,10 +95,17 @@
          </p>
         </div>
            <div class="empanada-1">
-            <img src="./images/ajo.svg" alt=""/>
-            <h3>$ 250 porc.</h3>
+            <img src="./images/Cincuent.png" alt="" class="fiesta"/>
+            <h3>$ 4000 x 50u.</h3>
             <p>
-             Rica Salsa de Ajo para untar a tus empanadas o tequeños.
+             Mini Tequeños tradicionales de Queso congelados listos para freir.
+            </p>
+           </div>
+           <div class="empanada-1">
+            <img src="./images/ajo.svg" alt="" class="ajo"/>
+            <h3>$ 240 x porcion</h3>
+            <p>
+             Rica salsa de Ajo para untar los tequeños y empanadas.
             </p>
            </div>
 
@@ -131,8 +138,10 @@
            <img class="imade" src="./images/instag.svg" alt=""/>
         </div>
     </footer>
+    <div class="final">
     <h4>Desarrollado por Luis E. Diaz</h4>
     <h4>&copy; Sabores de Venezuela</h4>
+    </div>
     </section> 
 </body>
 </html>
