--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
            </div>
            <div class="empanada-1">
             <img src="./images/ajo.svg" alt="" class="ajo"/>
-            <h3>$ 240 x porcion</h3>
+            <h3>$ 250 el potecito</h3>
             <p>
              Rica salsa de Ajo para untar los tequeños y empanadas.
             </p>
