--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
         <div class="redes">
             <div>
-            <h4>Siguenos en </h4>
+            <h4>Siguenos</h4>
            </div>
            <img class="imade" src="./images/face.svg" alt=""/>
            <img class="imade" src="./images/instag.svg" alt=""/>
@@ -140,7 +140,7 @@
     </footer>
     <div class="final">
     <h4>Desarrollado por Luis E. Diaz</h4>
-    <h4>&copy; Sabores de Venezuela</h4>
+    <h4>&copy; Sabores de Venezuela 2023</h4>
     </div>
     </section> 
 </body>
