--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <span>Sabores de Venezuela</span>
                <h1>TEQUEÑOS</h1>
                <p>
-                Los Tequeños Venezolanos es una masa de harina de trigo frita rellena de queso 
-                amarillo. Se pueden servir solos o acompañados por alguna salsa.
+                Los Tequeños Venezolanos es una masa de harina de trigo frita rellena de queso.
+                 Se pueden servir solos o acompañados por alguna salsa.
                </p>
             </div>
             <div class="header-img">
@@ -99,6 +99,7 @@
             <h3>$ 4000 x 50u.</h3>
             <p>
              Mini Tequeños tradicionales de Queso congelados listos para freir.
+              Tamaño real (4cm.) ideal para cumpleaños infantiles.
             </p>
            </div>
            <div class="empanada-1">
