--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
 
         <div class="contenedor">
             <div>
-            <h4>Tenemos Delivery  </h4>
+            <h4>Tenemos Delivery</h4>
             </div>
             <img class="imade" src="./images/deliver.png" alt=""/>
         </div>
 
-        <p>Valido solo para la ciudad de Villa Regina.</p>
+        <p>Delivery solo para Villa Regina</p>
 
         <div class="redes">
             <div>
