arreglar logo brubank

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="link">
          <h3>Medios de Pago</h3>
          <div class="imagen">
-            <img src="https://media.glassdoor.com/sqll/2848915/brubank-squarelogo-1670231636402.png"/>
+            <img src="https://play-lh.googleusercontent.com/RsxI54jr_DP_i7Xn8gdhXrzmWJrNEpirDnWcdLfbQqG64sy_I1ITKTNLdVMeKnUZlPJF"/>
             <p>Banco Brubank</p>
          </div>
          <div class="valido">
