--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                </p>
             </div>
             <div class="header-img">
-               <img src="./images/tequeto.svg" alt="tequeños" width="350px" height="350px"/>
+               <img src="./images/teq1.png" alt="tequeños" width="350px" height="350px"/>
             </div>
         </div>
     </header>
