--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="header-content container">
             <div class="header-txt">
                 <span>Sabores de Venezuela</span>
-               <h1>TEQUEÑOS</h1>
+               <h1>Tequeños</h1>
                <p>
                 Los Tequeños Venezolanos es una masa de harina de trigo frita rellena de queso.
                  Se pueden servir solos o acompañados por alguna salsa.
