--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Sabores de Venezuela</title>
     <link rel="stylesheet" href="style.css">;
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VDM3FYR8V1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VDM3FYR8V1');
+</script>
 <body>
     <header class="header">
         <div class="menu container">
