--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
     <section class="empanada-content">
         <div class="empanada-1">
          <img src="./images/tequeos.svg" alt=""/>
-         <h3>$ 2300 doc.</h3>
+         <h3>$2300 doc.</h3>
          <p>
             Los tequeños viene rellenos de Queso, Jamon y Queso, Salchichas.
          </p>
         </div>
         <div class="empanada-1">
             <img src="./images/tresle.svg" alt=""/>
-            <h3>$ 1300 porc.</h3>
+            <h3>$1300 porc.</h3>
             <p>
                Torta Tres leches es un rico bizcocho bañado con Leche Condensada, Evaporada y 
                Crema de Leche. Decorado con un delicioso Merengue Italiano.
@@ -90,7 +90,7 @@
            </div>
            <div class="empanada-1">
             <img src="./images/tequeto.svg" alt=""/>
-            <h3>$ 2900 Combo Tropical</h3>
+            <h3>$2900 Combo Tropical</h3>
             <p>
               Combo Tropical, vienen 6 empanadas, 6 tequeños y una salsa de ajo.
             </p>
@@ -98,7 +98,7 @@
         </div>
         <div class="empanada-1">
          <img src="./images/empamano.svg" alt=""/>
-         <h3>$ 2900 doc.</h3>
+         <h3>$2900 doc.</h3>
          <p>
            Las Empanadas vienen rellenas de Carne, Carne con Queso, Pollo y Pollo con queso.
          </p>
@@ -113,7 +113,7 @@
            </div>
            <div class="empanada-1">
             <img src="./images/ajo.svg" alt="" class="ajo"/>
-            <h3>$ 300 el potecito</h3>
+            <h3>$300 el potecito</h3>
             <p>
              Rica salsa de Ajo para untar los tequeños y empanadas.
             </p>
@@ -126,7 +126,7 @@
         <div class="link">
          <h3>Medios de Pago</h3>
          <div class="imagen">
-            <img src="https://play-lh.googleusercontent.com/RsxI54jr_DP_i7Xn8gdhXrzmWJrNEpirDnWcdLfbQqG64sy_I1ITKTNLdVMeKnUZlPJF"/>
+            <img src="https://res.cloudinary.com/crunchbase-production/image/upload/c_lpad,f_auto,q_auto:eco,dpr_1/romqafyfcpco6xheddzv" width="5px"/>
             <p>Banco Brubank</p>
          </div>
          <div class="valido">
