--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
            </div>
            <div class="empanada-1">
             <img src="./images/tequeto.svg" alt=""/>
-            <h3>$2900 Combo Tropical</h3>
+            <h3>$3000 Combo Tropical</h3>
             <p>
               Combo Tropical, vienen 6 empanadas, 6 tequeños y una salsa de ajo.
             </p>
@@ -98,7 +98,7 @@
         </div>
         <div class="empanada-1">
          <img src="./images/empamano.svg" alt=""/>
-         <h3>$2900 doc.</h3>
+         <h3>$3000 doc.</h3>
          <p>
            Las Empanadas vienen rellenas de Carne, Carne con Queso, Pollo y Pollo con queso.
          </p>
@@ -153,7 +153,7 @@
     <h4>www.saboresdevenezuela.online</h4>
     <h4>Desarrollado por Luis E. Diaz</h4>
     <h4>&copy; Sabores de Venezuela 2023</h4>
-    <h4>Argentina</h4>
+    <h4>Villa Regina.Argentina</h4>
     </div>
     </section> 
 </body>
