--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
          <img src="./images/tequeos.svg" alt=""/>
          <h3>$2400 doc.</h3>
          <p>
-            Los tequeños viene rellenos de Queso, Jamon y Queso, Salchichas.
+            Los tequeños viene rellenos de Queso, Jamon c/Queso, Queso c/panceta.
          </p>
         </div>
         <div class="empanada-1">
