--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     </footer>
     <div class="final">
     <h4>www.saboresdevenezuela.online</h4>
-    <h4>Desarrollado por Luis E. Diaz</h4>
+    <h4>Web Developers Luis E. Diaz</h4>
     <h4>&copy; Sabores de Venezuela 2023</h4>
     <h4>Villa Regina.Argentina</h4>
     </div>
