--- a/index.html
+++ b/index.html
@@ -145,8 +145,14 @@
             <div>
             <h4>Siguenos</h4>
            </div>
-           <img class="imade" src="./images/face.svg" alt=""/>
-           <img class="imade" src="./images/instag.svg" alt=""/>
+           <div>
+           <a href="https://www.facebook.com/sabores de venezuela" target="_blank">
+            <img class="imade" src="./images/face.svg" alt=""/></a>
+           </div>
+           <div>
+           <a href="https://www.instagram.com/sabores de venezuela2020" target="_blank">
+            <img class="imade" src="./images/instag.svg" alt=""/></a>
+           </div>
         </div>
     </footer>
     <div class="final">
