--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
             <h4>Siguenos</h4>
            </div>
            <div>
-           <a href="https://www.facebook.com/sabores de venezuela" target="_blank">
+           <a href="https://www.facebook.com/Sabores de Venezuela" target="_blank">
             <img class="imade" src="./images/face.svg" alt=""/></a>
            </div>
            <div>
-           <a href="https://www.instagram.com/sabores de venezuela2020" target="_blank">
+           <a href="https://www.instagram.com/saboresdevenezuela2020" target="_blank">
             <img class="imade" src="./images/instag.svg" alt=""/></a>
            </div>
         </div>
