--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
             <h4>Siguenos</h4>
            </div>
            <div>
-           <a href="https://www.facebook.com/p/Sabores de Venezuela/embed" target="_blank">
+           <a href="https://www.facebook.com/profile.php?id=100063541335021" target="_blank">
             <img class="imade" src="./images/face.svg" alt=""/></a>
            </div>
            <div>
-           <a href="https://www.instagram.com/p/saboresdevenezuela2020/embed" target="_blank">
+           <a href="https://www.instagram.com/saboresdevenezuela2020?igshid=NjlwNzlyMDk2Mg==" target="_blank">
             <img class="imade" src="./images/instag.svg" alt=""/></a>
            </div>
         </div>
