--- a/index.html
+++ b/index.html
@@ -142,15 +142,15 @@
         <p>Delivery solo para Villa Regina</p>
 
         <div class="redes">
-            <div>
+            <div class="sigue">
             <h4>Siguenos</h4>
            </div>
            <div>
-           <a href="https://www.facebook.com/profile.php?id=100063541335021" target="_blank">
+           <a href="https://www.facebook.com/profile.php?id=100063541335021" >
             <img class="imade" src="./images/face.svg" alt=""/></a>
            </div>
            <div>
-           <a href="https://www.instagram.com/saboresdevenezuela2020?igshid=NjlwNzlyMDk2Mg==" target="_blank">
+           <a href="https://www.instagram.com/saboresdevenezuela2020?igshid=NjlwNzlyMDk2Mg==">
             <img class="imade" src="./images/instag.svg" alt=""/></a>
            </div>
         </div>
