--- a/index.html
+++ b/index.html
@@ -136,12 +136,23 @@
             <div>
             <h4>Tenemos Delivery</h4>
             </div>
-            <img class="imade" src="./images/deliver.png" alt=""/>
+            <img class="imade" src="./images/deliver.png" alt="" width="10px"/>
         </div>
-
+        <br>
         <p>Delivery solo para Villa Regina</p>
-
-       
+        <div class="redes">
+            <div class="sigue">
+                <h5>Siguenos</h5>
+            </div>
+            <div>
+            <a href="https://www.facebook.com/profile.php?id=100063541335021">
+             <img class="imade" src="./images/face.svg" alt=""/></a>
+            </div>
+            <div>
+            <a href="https://www.instagram.com/saboresdevenezuela2020?igshid=NjlwNzlyMDk2Mg==">
+            <img class="imade" src="./images/instag.svg" alt=""/></a>
+            </div>
+        </div>
     </footer>
     <div class="final">
     <h4>www.saboresdevenezuela.online</h4>
