--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                </p>
             </div>
             <div class="header-img">
-               <img src="./images/teq1.png" alt="tequeños" width="350px" height="350px"/>
+               <img src="./images/tequebande.png" alt="tequeños" width="400px" height="350px"/>
             </div>
         </div>
     </header>
