--- a/index.html
+++ b/index.html
@@ -126,10 +126,11 @@
         <div class="link">
          <h3>Medios de Pago</h3>
          <div class="imagen">
-            <img src="https://res.cloudinary.com/crunchbase-production/image/upload/c_lpad,f_auto,q_auto:eco,dpr_1/romqafyfcpco6xheddzv" width="5px"/>
-            <p>Banco Brubank</p>
+            <img src="./images/visa.png"><img src="./images/tarjeta.png" width="15px">
          </div>
+         <br>
          <div class="valido">
+            <p>Debito y Credito</p>
          </div>
 
         <div class="contenedor">
