--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                </p>
             </div>
             <div class="header-img">
-               <img src="./images/tequebande.png" alt="tequeños" width="400px" height="300px"/>
+               <img src="./images/tequebande.png" alt="tequeños" width="400px" height="300"/>
             </div>
         </div>
     </header>
@@ -126,7 +126,7 @@
         <div class="link">
          <h3>Medios de Pago</h3>
          <div class="imagen">
-            <img src="./images/visa.png"><img src="./images/tarjeta.png" width="15px">
+            <img src="./images/visatar.png"><img src="./images/masterblack.png">
          </div>
          <br>
          <div class="valido">
@@ -137,7 +137,6 @@
             <div>
             <h5>Tenemos Delivery</h5>
             </div>
-            <img class="imade" src="./images/deliver.png" alt="" width="10px"/>
         </div>
         <br>
         <p>Delivery solo para Villa Regina</p>
