--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <li><a href="#Seccion1">Inicio</a></li>
                 <li><a href="#Seccion2">Productos</a></li>
                 <li><a href="#Seccion3">Contacto</a></li>
+                <li><a href="https://www.tequevzla.online/">Web Tequeños</a></li>
             </ul>
 
         </nav>
