--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
                </p>
             </div>
             <div class="header-img">
-               <img src="./images/tequebande.png" alt="tequeños" width="400px" height="300"/>
+               <img src="./images/tequebande.png" alt="tequeños" width="300px" height="400px"/>
             </div>
         </div>
     </header>
 
     <section class="info container" id="Seccion1">
         <div class="info-1">
-           <img src="./images/empacesta.svg" alt=""/>
+           <img src="./images/empappal.png" alt=""/>
         </div>
         <div class="info-2">
            <h2>Empanadas Venezolanas</h2>
