--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./images/sabor.ico">;
+    <link rel="icon" href="./images/sabor.ico">
     <title>Sabores de Venezuela</title>
-    <link rel="stylesheet" href="style.css">;
+    <link rel="stylesheet" href="style.css">
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-VDM3FYR8V1"></script>
@@ -76,14 +76,14 @@
     <section class="empanada-content">
         <div class="empanada-1">
          <img src="./images/tequeos.svg" alt=""/>
-         <h3>$5000 doc.</h3>
+         <h3>$6000 doc.</h3>
          <p>
-            Los tequeños viene rellenos de Queso, Jamon c/Queso, Queso c/panceta.
+            Los tequeños viene rellenos de Queso, Jamon con Queso.
          </p>
         </div>
         <div class="empanada-1">
             <img src="./images/tresle.svg" alt=""/>
-            <h3>$3000 porc.</h3>
+            <h3>$3500 porc.</h3>
             <p>
                Torta Tres leches es un rico bizcocho bañado con Leche Condensada, Evaporada y 
                Crema de Leche. Decorado con un delicioso Merengue Italiano.
@@ -91,22 +91,22 @@
            </div>
            <div class="empanada-1">
             <img src="./images/tequeto.svg" alt=""/>
-            <h3>$6500 Combo Tropical</h3>
+            <h3>$8000 Combo Tropical</h3>
             <p>
               Combo Tropical, vienen 6 empanadas, 6 tequeños y una salsa de ajo.
             </p>
            </div>
         </div>
         <div class="empanada-1">
-         <img src="./images/empamano.svg" alt=""/>
-         <h3>$7000 doc.</h3>
+         <img src="./images/empatres.png" alt=""/>
+         <h3>$10000 doc.</h3>
          <p>
            Las Empanadas vienen rellenas de Carne, Carne con Queso, Pollo y Pollo con queso.
          </p>
         </div>
            <div class="empanada-1">
             <img src="./images/Cincuent.png" alt="" class="fiesta"/>
-            <h3>$8000 x 50u.</h3>
+            <h3>$9000 x 50u.</h3>
             <p>
              Mini Tequeños tradicionales de Queso congelados listos para freir.
               Tamaño real (4cm.) ideal para cumpleaños infantiles.
@@ -114,7 +114,7 @@
            </div>
            <div class="empanada-1">
             <img src="./images/ajo.svg" alt="" class="ajo"/>
-            <h3>$500 el potecito</h3>
+            <h3>$1000 el potecito</h3>
             <p>
              Rica salsa de Ajo para untar los tequeños y empanadas.
             </p>
