--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./images/sabor.ico">
     <title>Sabores de Venezuela</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <!-- Google tag (gtag.js) -->
@@ -46,14 +47,14 @@
                </p>
             </div>
             <div class="header-img">
-               <img src="./images/tequebande.png" alt="tequeños" width="300px" height="400px"/>
+               <img src="./images/tequetorre.png" alt="tequeños"/>
             </div>
         </div>
     </header>
 
     <section class="info container" id="Seccion1">
         <div class="info-1">
-           <img src="./images/empappal.png" alt=""/>
+           <img src="./images/fullempa.png" alt=""/>
         </div>
         <div class="info-2">
            <h2>Empanadas Venezolanas</h2>
@@ -161,6 +162,9 @@
     <h4>&copy; Sabores de Venezuela 2023</h4>
     <h4>Villa Regina.Argentina</h4>
     </div>
-    </section> 
+    </section>
+    <a href="#" class="scroll">
+        <i class="fa-solid fa-arrow-up"></i>
+    </a> 
 </body>
 </html>
